# sudio

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  audio.py  example.py  main.py  pyproject.toml  requirements.txt  setup.py  temp.txt  tools.py
.github/workflows/: build_sdist.yml  python-package.yml  release_tag.yml  static.yml
docs/: audiosys.rst  conf.py  core.rst  doxyfilter.py  index.rst  installation.rst  pipeline.rst  rateshift.rst  requirements.txt  start.rst  stream.rst  wrap.rst
docs/_build/html/: .buildinfo  audiosys.html  core.html  genindex.html  index.html  installation.html  io.html  metadata.html  objects.inv  pipeline.html  py-modindex.html  rateshift.html  search.html  searchindex.js  start.html  stream.html  types.html  wrap.html
docs/_build/html/_sources/: index.rst.txt  io.rst.txt  metadata.rst.txt  types.rst.txt
docs/_build/html/_sources/api/: classrateshift_1_1_callback_resampler.rst.txt  classrateshift_1_1_resampler.rst.txt  classstdstream_1_1_audio_stream.rst.txt  classsuio_1_1_audio_codec.rst.txt  classsuio_1_1_audio_codec_1_1_audio_file_stream.rst.txt  dir_sudio.rst.txt  dir_sudio_io.rst.txt  dir_sudio_io_inc.rst.txt  dir_sudio_io_src.rst.txt  dir_sudio_rateshift.rst.txt  dir_sudio_rateshift_inc.rst.txt  dir_sudio_rateshift_src.rst.txt  enum_codec_8hpp_1a39ec6885353a688bc194a12728d84e61.rst.txt  enum_rateshift_8hpp_1a4f51376d8b1da9e9cdcbf19887cd5dd9.rst.txt  file_sudio_io_inc_codec.hpp.rst.txt  file_sudio_io_inc_stdstream.hpp.rst.txt  file_sudio_io_src_codec.cpp.rst.txt  file_sudio_io_src_stdstream.cpp.rst.txt  file_sudio_io_src_suiobind.cpp.rst.txt  file_sudio_rateshift_inc_rateshift.hpp.rst.txt  file_sudio_rateshift_src_python_bindings.cpp.rst.txt  file_sudio_rateshift_src_rateshift.cpp.rst.txt  function_rateshift_8hpp_1aeadfdeeae8deb7874d2f11fc06cc502a.rst.txt  function_stdstream_8hpp_1ab3ab2c0bbe74c5efe0ea9a966c4836c9.rst.txt  namespace_rateshift.rst.txt  namespace_stdstream.rst.txt  namespace_suio.rst.txt  program_listing_file_sudio_io_inc_codec.hpp.rst.txt  program_listing_file_sudio_io_inc_stdstream.hpp.rst.txt  program_listing_file_sudio_io_src_codec.cpp.rst.txt  program_listing_file_sudio_io_src_stdstream.cpp.rst.txt  program_listing_file_sudio_io_src_suiobind.cpp.rst.txt  program_listing_file_sudio_rateshift_inc_rateshift.hpp.rst.txt  program_listing_file_sudio_rateshift_src_python_bindings.cpp.rst.txt  program_listing_file_sudio_rateshift_src_rateshift.cpp.rst.txt  structstdstream_1_1_audio_device_info.rst.txt  structsuio_1_1_audio_file_info.rst.txt  unabridged_orphan.rst.txt
docs/_build/html/api/: classrateshift_1_1_callback_resampler.html  classrateshift_1_1_resampler.html  classstdstream_1_1_audio_stream.html  classsuio_1_1_audio_codec.html  classsuio_1_1_audio_codec_1_1_audio_file_stream.html  dir_sudio.html  dir_sudio_io.html  dir_sudio_io_inc.html  dir_sudio_io_src.html  dir_sudio_rateshift.html  dir_sudio_rateshift_inc.html  dir_sudio_rateshift_src.html  enum_codec_8hpp_1a39ec6885353a688bc194a12728d84e61.html  enum_rateshift_8hpp_1a4f51376d8b1da9e9cdcbf19887cd5dd9.html  file_sudio_io_inc_codec.hpp.html  file_sudio_io_inc_stdstream.hpp.html  file_sudio_io_src_codec.cpp.html  file_sudio_io_src_stdstream.cpp.html  file_sudio_io_src_suiobind.cpp.html  file_sudio_rateshift_inc_rateshift.hpp.html  file_sudio_rateshift_src_python_bindings.cpp.html  file_sudio_rateshift_src_rateshift.cpp.html  function_rateshift_8hpp_1aeadfdeeae8deb7874d2f11fc06cc502a.html  function_stdstream_8hpp_1ab3ab2c0bbe74c5efe0ea9a966c4836c9.html  io_root.html  namespace_rateshift.html  namespace_stdstream.html  namespace_suio.html  program_listing_file_sudio_io_inc_codec.hpp.html  program_listing_file_sudio_io_inc_stdstream.hpp.html  program_listing_file_sudio_io_src_codec.cpp.html  program_listing_file_sudio_io_src_stdstream.cpp.html  program_listing_file_sudio_io_src_suiobind.cpp.html  program_listing_file_sudio_rateshift_inc_rateshift.hpp.html  program_listing_file_sudio_rateshift_src_python_bindings.cpp.html  program_listing_file_sudio_rateshift_src_rateshift.cpp.html  structstdstream_1_1_audio_device_info.html  structsuio_1_1_audio_file_info.html  unabridged_orphan.html
examples/STFT/: fft.kv  fft.py  main.py
examples/STFT/stft/: __init__.py  _fft.py
sudio/: __init__.py  _audio.py  _master.py  _pipeline.py  _port.py  _process.py  _process_common.py  _register.py  _tools.py  core.py  pipeline.py  sudio.py  types.py
sudio/audiosys/: __init__.py  channel.py  codec.py  codecinfo.py  fileinfo.py  interface.py  io.py  miniaudio.py  sync.py  typeconversion.py  window.py
sudio/audioutils/: __init__.py  audio.py  cacheutil.py  channel.py  codec.py  codecinfo.py  fileinfo.py  interface.py  stream.py  sync.py  typeconversion.py  window.py
sudio/extras/: arraytool.py  exmath.py  io.py  strtool.py  timed_indexed_string.py
sudio/io/: CMakeLists.txt  __init__.py  __init__.pyi
sudio/io/codec/: __init.py
sudio/io/inc/: codec.hpp  stdstream.hpp
sudio/io/src/: codec.cpp  stdstream.cpp  suiobind.cpp
sudio/metadata/: __init__.py  audio_record_database.py  metadata.py  metadatadatabase.py
sudio/rateshift/: CMakeLists.txt  __init__.py  __init__.pyi
sudio/rateshift/inc/: rateshift.hpp
sudio/rateshift/src/: python_bindings.cpp  rateshift.cpp
sudio/stream/: stream.py  streamcontrol.py  streamingtimecontroller.py  utils.py
sudio/types/: __init__.py  enum.py  error.py  name.py  pipelineonbusytype.py  pipelineprocesstype.py  sample.py
sudio/utils/: arraytool.py  cacheutil.py  exmath.py  io.py  strtool.py  timed_indexed_string.py
sudio/wrap/: generator.py  wrap.py  wrapgenerator.py
tests/submodules/rateshift/: test_api.py
