[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "cmake>=3.18",
    "auditwheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sudio"
dynamic = ["version"]
description = "Audio Processing Platform"
authors = [{name = "mrzahaki"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache License 2.0"}

[tool.setuptools_scm]
write_to = "sudio/_version.py"
