[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "cmake>=3.18",
    "ninja",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "sudio"
dynamic = ["version"]
description = "Audio Processing Platform"
authors = [{name = "mrzahaki", email = "mrzahaki@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache License 2.0"}

[tool.setuptools_scm]
write_to = "sudio/_version.py"
